# quant-platform

./: .env  .env.example  .pre-commit-config.yaml  Dockerfile  MILESTONE.md  fix_linting.py  ollama-test.yml  project-handoff-summary.md  pyproject.toml  test_env.py
.github/workflows/: ci.yml
deployments/: .env  docker-compose.dev.yml
deployments/certs/: dev.crt  dev.key
docs/llm-workflows/: claude_workflow_templates.md
scripts/: data_quality_monitor.py  test_data_cleaning_pipeline.py  test_fallback_adapter.py  test_polygon_adapter.py  test_yahoo_adapter.py
src/agents/: base.py  llm_orchestrator.py
src/api/: main.py
src/api/routes/: auth.py  llm.py  portfolios.py  strategies.py  users.py
src/core/data/: models.py
src/core/data/cleaning/: cleaner.py  pipeline.py  validator.py
src/core/data/providers/: base.py  fallback.py  polygon.py  yahoo.py
src/core/data/validation/: data_quality.py
src/core/llm/: orchestrator.py
src/core/llm/agents/: base.py
src/core/llm/providers/: anthropic.py  base.py  ollama_provider.py  openai.py
src/core/llm/schema/: base.py
src/core/llm/utils/: cost_tracker.py  rate_limiter.py  routing_logger.py
src/core/logging/: audit_logger.py  http_logger.py  logger.py
src/core/portfolio/: test_import.py
src/core/risk/: alerting.py  circuit_breaker.py  exposure_guard.py  risk_engine.py
src/core/security/: jwt.py  middleware.py
src/core/strategies/: performance.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/sql/: create_continuous_aggs.sql
src/infrastructure/db/migrations/versions/: 811626fefbd5_add_audit_log_table.py  a80d736ff8c0_initial_clean_schema.py
src/test/: test_logger.py  test_logger_structure.py
